# Huffman-Archiver

./: .gitignore  CMakeLists.txt  README.md
include/: CLI.h  Huffman.h  HuffmanArchiver.h  bin_manip.h
src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  bin_manip.cpp  main.cpp
test/: testCLI.cpp  testHuffman.cpp  testHuffmanArchiver.cpp
